--- a/src/app/Users/user-listar/user-listar/user-listar.component.html
+++ b/src/app/Users/user-listar/user-listar/user-listar.component.html
@@ -1,10 +1,43 @@
-<p>Lista de usuários</p>
-
-<ul *ngIf="users$ | async as users; else carregando">
-    <li *ngForOf="let user of users">{{user.firstName}}</li>
-    
-</ul>
-
+<mat-toolbar>
+    <span>Lista de usuários</span>
+  </mat-toolbar>
 <ng-template #carregando>
-    Carregando...
+    <mat-spinner></mat-spinner>
 </ng-template>
+<div class="componente-container">
+    <div *ngIf="users$ | async as users; else carregando">
+        <table mat-table [dataSource]="users" class="mat-elevation-z8">
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef> ID </th>
+              <td mat-cell *matCellDef="let user"> {{user.id}} </td>
+            </ng-container>
+            <ng-container matColumnDef="firstName">
+              <th mat-header-cell *matHeaderCellDef> Nome </th>
+              <td mat-cell *matCellDef="let user"> {{user.firstName}} </td>
+            </ng-container>          
+            <ng-container matColumnDef="lastName">
+              <th mat-header-cell *matHeaderCellDef> Sobrenome </th>
+              <td mat-cell *matCellDef="let user"> {{user.lastName}} </td>
+            </ng-container>          
+            <ng-container matColumnDef="email">
+              <th mat-header-cell *matHeaderCellDef> Email </th>
+              <td mat-cell *matCellDef="let user"> {{user.email}} </td>
+            </ng-container>
+            <ng-container matColumnDef="birthday">
+                <th mat-header-cell *matHeaderCellDef> Aniversário </th>
+                <td mat-cell *matCellDef="let user"> {{user.birthday}} </td>
+              </ng-container>
+              <ng-container matColumnDef="login">
+                <th mat-header-cell *matHeaderCellDef> Login </th>
+                <td mat-cell *matCellDef="let user"> {{user.login}} </td>
+              </ng-container>
+              <ng-container matColumnDef="phone">
+                <th mat-header-cell *matHeaderCellDef> Telefone </th>
+                <td mat-cell *matCellDef="let user"> {{user.phone}} </td>
+              </ng-container>          
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table> 
+    </div>
+</div>
+
