--- a/src/app/Users/user-listar/user-listar/user-listar.component.html
+++ b/src/app/Users/user-listar/user-listar/user-listar.component.html
@@ -39,6 +39,12 @@
               <ng-container matColumnDef="phone">
                 <th mat-header-cell *matHeaderCellDef> Telefone </th>
                 <td mat-cell *matCellDef="let user"> {{user.phone}} </td>
+              </ng-container> 
+              <ng-container matColumnDef="acao">
+                <th mat-header-cell *matHeaderCellDef> Ação </th>
+                <td mat-cell *matCellDef="let user"> 
+                  <button mat-raised-button color="primary" routerLink="/users/editar/{{user.id}}">Editar</button>
+                </td>
               </ng-container>          
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
